# Minesweeper

./: .gitignore  Minesweepper.py  README.md  minesweeper.py  pyproject.toml  scrap.py
minesweeper/: main.py  minefield.py  minesweeper.py  minesweeper_old.py  minesweeper_ui.py  utils.py
scripts/: generate_test_games.py
src/minesweeper/: __init__.py  main.py  minefield.py  minesweeper_.py  minesweeper_ui.py  utils.py
tests/: generate_test_games.py  test_minefield.py  test_minesweeper.py
tests/resources/session_0/: acts.txt  minefield.npy  states.npy
tests/resources/session_1/: acts.txt  minefield.npy  states.npy
tests/resources/session_2/: acts.txt  minefield.npy  states.npy
