[project]
name = "minesweeper"
version = "0.1.0"
dependencies = [
    "numpy",
    "pygame",
    "typer",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
lines_between_sections = 0
force_sort_within_sections = true
honor_case_in_force_sorted_sections = true
skip = [".git", ".venv"]
line_length = 120

[tool.pyright]
exclude = ["scratch.py"]

[project.scripts]
minesweeper = "minesweeper.main:app"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
